force-app/main/default/objects/Volunteer_Hours__c/Volunteer_Hours__c.object-meta.xml
<CustomObject>
    <label>Volunteer Service</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Volunteer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Service</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>