force-app/main/default/objects/Volunteer_Hours__c/fields/Active_Historied__c.field-meta.xml
<CustomField>
    <fullName>Active_Historied__c</fullName>
    <label>Active/Historied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Historied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>