force-app/main/default/objects/Volunteer_Hours__c/fields/Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Donor_ID__c</fullName>
    <description>Donor ID of constituent, if no constituent then ID of Org</description>
    <formula>IF ( ISBLANK(  Contact__c  ),  Organization__r.ucinn_ascendv2__Donor_ID__c  ,  Contact__r.ucinn_ascendv2__Donor_ID__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor ID</label>
    <type>Text</type>
</CustomField>