force-app/main/default/objects/Volunteer_Hours__c/fields/End_Date_Today__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Today__c</fullName>
    <formula>IF( End_Date__c = TODAY(), TRUE, FALSE)</formula>
    <label>End Date Today</label>
    <type>Checkbox</type>
</CustomField>