force-app/main/default/objects/Volunteer_Hours__c/fields/Funding_College__c.field-meta.xml
<CustomField>
    <fullName>Funding_College__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding College</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.Fund_Source__c</field>
            <operation>equals</operation>
            <value>Funding College</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Volunteer Service</relationshipLabel>
    <relationshipName>Volunteer_Service</relationshipName>
    <type>Lookup</type>
</CustomField>