force-app/main/default/objects/Volunteer_Hours__c/fields/FY_Appointed__c.field-meta.xml
<CustomField>
    <fullName>FY_Appointed__c</fullName>
    <label>FY Appointed</label>
    <length>4</length>
    <type>Text</type>
</CustomField>