force-app/main/default/objects/Volunteer_Hours__c/fields/FY_Emeritus__c.field-meta.xml
<CustomField>
    <fullName>FY_Emeritus__c</fullName>
    <label>FY Emeritus</label>
    <length>4</length>
    <type>Text</type>
</CustomField>