force-app/main/default/objects/Volunteer_Hours__c/fields/FY_of_Service__c.field-meta.xml
<CustomField>
    <fullName>FY_of_Service__c</fullName>
    <description>Calculates FY based on Start Date.</description>
    <formula>IF( 
  MONTH( Start_Date__c)  &lt;= 7 , 
    TEXT(YEAR(Start_Date__c))  , 
    TEXT(YEAR(Start_Date__c)+1)
)</formula>
    <inlineHelpText>Calculates FY based on Start Date.</inlineHelpText>
    <label>FY of Service</label>
    <type>Text</type>
</CustomField>