force-app/main/default/objects/Volunteer_Hours__c/fields/Governance_Campaign_and_Committee__c.field-meta.xml
<CustomField>
    <fullName>Governance_Campaign_and_Committee__c</fullName>
    <formula>IF( RecordType.Name = &apos;ISU Foundation Governors&apos;, Volunteer_Job__r.Name +  &apos; &apos; +  CASE(Status__c, &apos;Emeritus&apos;, &apos;Emeritus&apos;, &apos;Active&apos;), IF( RecordType.Name = &apos;ISU Foundation Board of Directors&apos;, Volunteer_Job__r.Name, Volunteer_Shift__r.Name + &apos; - &apos; + Volunteer_Job__r.Name))</formula>
    <label>Governance Campaign and Committee</label>
    <type>Text</type>
</CustomField>