force-app/main/default/objects/Volunteer_Hours__c/fields/ISUF_Governor_Eligible_Based_on_Giving__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Governor_Eligible_Based_on_Giving__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISUF Governor Eligible Based on Giving</label>
    <type>Checkbox</type>
</CustomField>