force-app/main/default/objects/Volunteer_Hours__c/fields/ISUF_Volunteer_Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Volunteer_Service_Notes__c</fullName>
    <inlineHelpText>Notes about the role of the volunteer</inlineHelpText>
    <label>Volunteer Service Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>