force-app/main/default/objects/Volunteer_Hours__c/fields/Leadership_Type__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Type__c</fullName>
    <label>Leadership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collegiate</fullName>
            </value>
            <value>
                <fullName>Departmental</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>General Leadership</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Elected Official</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>