force-app/main/default/objects/Volunteer_Hours__c/fields/Nominated_By__c.field-meta.xml
<CustomField>
    <fullName>Nominated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nominated By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Nominations/Prospect</relationshipLabel>
    <relationshipName>Volunteer_Service</relationshipName>
    <type>Lookup</type>
</CustomField>