force-app/main/default/objects/Volunteer_Hours__c/fields/Nominated_Date__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Date__c</fullName>
    <label>Nominated Date</label>
    <type>Date</type>
</CustomField>