force-app/main/default/objects/Volunteer_Hours__c/fields/Number_of_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Volunteers__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Defaults to 1. Increase if this person is bringing additional people whom you are not directly tracking as contacts, and won&apos;t be logging individual volunteer hours against.</inlineHelpText>
    <label>Number of Volunteers</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>