force-app/main/default/objects/Volunteer_Hours__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volunteer Service</relationshipLabel>
    <relationshipName>Volunteer_Service</relationshipName>
    <type>Lookup</type>
</CustomField>