force-app/main/default/objects/Volunteer_Hours__c/fields/Prospect_Date__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Date__c</fullName>
    <label>Prospect Date</label>
    <type>Date</type>
</CustomField>