force-app/main/default/objects/Volunteer_Hours__c/fields/Prospect_Notes__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Notes__c</fullName>
    <inlineHelpText>Reason for indicating this individual as a prospective volunteer</inlineHelpText>
    <label>Prospect Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>