force-app/main/default/objects/Volunteer_Hours__c/fields/Recommended_By__c.field-meta.xml
<CustomField>
    <fullName>Recommended_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommended By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Governance Recommendation</relationshipLabel>
    <relationshipName>Volunteer_Hours1</relationshipName>
    <type>Lookup</type>
</CustomField>