force-app/main/default/objects/Volunteer_Hours__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Co-Chair</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Emeritus</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Ex-Officio</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Gamewatch Coordinator</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Honorary Chair</fullName>
            </value>
            <value>
                <fullName>Honorary Member</fullName>
            </value>
            <value>
                <fullName>Immediate Past President</fullName>
            </value>
            <value>
                <fullName>Innovator In Residence</fullName>
            </value>
            <value>
                <fullName>Interim Chair</fullName>
            </value>
            <value>
                <fullName>Interim Co- President</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>OLLI Volunteer – Ambassador Committee Chair</fullName>
            </value>
            <value>
                <fullName>OLLI Volunteer – Ambassador Committee Member</fullName>
            </value>
            <value>
                <fullName>OLLI Volunteer – Board Chair</fullName>
            </value>
            <value>
                <fullName>OLLI Volunteer – Board Chair Elect</fullName>
            </value>
            <value>
                <fullName>OLLI Volunteer – Board Member</fullName>
                <isActive>false</isActive>
                <label>OLLI Volunteer – Board Member</label>
            </value>
            <value>
                <fullName>OLLI Volunteer – Board Past Chair</fullName>
            </value>
            <value>
                <fullName>OLLI Volunteer – Board Secretary</fullName>
            </value>
            <value>
                <fullName>OLLI Volunteer – Board Vice Chair</fullName>
                <isActive>false</isActive>
                <label>OLLI Volunteer – Board Vice Chair</label>
            </value>
            <value>
                <fullName>OLLI Volunteer – Class</fullName>
            </value>
            <value>
                <fullName>OLLI Volunteer – Curriculum Committee Chair</fullName>
            </value>
            <value>
                <fullName>OLLI Volunteer – Curriculum Committee Member</fullName>
            </value>
            <value>
                <fullName>OLLI Volunteer – Curriculum Governance Chair</fullName>
                <isActive>false</isActive>
                <label>OLLI Volunteer – Curriculum Governance Chair</label>
            </value>
            <value>
                <fullName>OLLI Volunteer – Curriculum Governance Member</fullName>
                <isActive>false</isActive>
                <label>OLLI Volunteer – Curriculum Governance Member</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>