force-app/main/default/objects/Volunteer_Hours__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>