force-app/main/default/objects/Volunteer_Hours__c/fields/Trigger_Record__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Record</label>
    <type>Checkbox</type>
</CustomField>