force-app/main/default/objects/Volunteer_Hours__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <formula>TEXT(Volunteer_Shift__r.Unit__c)</formula>
    <label>Unit</label>
    <type>Text</type>
</CustomField>