force-app/main/default/objects/Volunteer_Hours__c/recordTypes/Alumni_Association_Leadership.recordType-meta.xml
<RecordType>
    <fullName>Alumni_Association_Leadership</fullName>
    <active>true</active>
    <label>Alumni Association Leadership</label>
</RecordType>