force-app/main/default/objects/Volunteer_Hours__c/recordTypes/Campaign_Committees.recordType-meta.xml
<RecordType>
    <fullName>Campaign_Committees</fullName>
    <active>true</active>
    <label>Campaign Committees</label>
</RecordType>