force-app/main/default/objects/Volunteer_Hours__c/recordTypes/ISU_Foundation_Board_of_Directors.recordType-meta.xml
<RecordType>
    <fullName>ISU_Foundation_Board_of_Directors</fullName>
    <active>true</active>
    <label>ISU Foundation Board of Directors</label>
</RecordType>