force-app/main/default/objects/Volunteer_Hours__c/recordTypes/ISU_Foundation_Committees.recordType-meta.xml
<RecordType>
    <fullName>ISU_Foundation_Committees</fullName>
    <active>true</active>
    <label>ISU Foundation Committees</label>
</RecordType>