force-app/main/default/objects/Volunteer_Hours__c/recordTypes/ISU_Foundation_Governors.recordType-meta.xml
<RecordType>
    <fullName>ISU_Foundation_Governors</fullName>
    <active>true</active>
    <label>ISU Foundation Governors</label>
</RecordType>