force-app/main/default/objects/Volunteer_Hours__c/recordTypes/University_Leadership.recordType-meta.xml
<RecordType>
    <fullName>University_Leadership</fullName>
    <active>true</active>
    <label>University Leadership</label>
</RecordType>