force-app/main/default/objects/Volunteer_Hours__c/listViews/Active_ISU_Foundation_Board_of_Directors.listView-meta.xml
<ListView>
    <fullName>Active_ISU_Foundation_Board_of_Directors</fullName>
    <columns>Contact__c</columns>
    <columns>Volunteer_Job__c</columns>
    <columns>Role__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Term__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Volunteer_Job__c</field>
        <operation>equals</operation>
        <value>ISU Foundation Board of Directors</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Volunteer_Hours__c.ISU_Foundation_Board_of_Directors</value>
    </filters>
    <label>Active ISU Foundation Board of Directors</label>
</ListView>