force-app/main/default/objects/Volunteer_Hours__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Active_Historied__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Volunteer_Job__c</field>
        <operation>contains</operation>
        <value>Alumni</value>
    </filters>
    <label>All</label>
</ListView>