force-app/main/default/objects/Volunteer_Hours__c/listViews/ISU_Foundation_Governors.listView-meta.xml
<ListView>
    <fullName>ISU_Foundation_Governors</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>Volunteer_Job__c</columns>
    <columns>Volunteer_Shift__c</columns>
    <columns>Status__c</columns>
    <columns>ISUF_Governor_Eligible_Based_on_Giving__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Non Governor Spouse</value>
    </filters>
    <label>ISU Foundation Governors</label>
</ListView>